src/test/ui/issues/issue-52049.nll.stderr
error[E0716]: temporary value dropped while borrowed
  --> $DIR/issue-52049.rs:16:10
   |
LL |     foo(&unpromotable(5u32));
   |          ^^^^^^^^^^^^^^^^^^ creates a temporary which is freed while still in use
LL | }
   | - temporary value is freed at the end of this statement
   |
   = note: borrowed value must be valid for the static lifetime...

error: aborting due to previous error

For more information about this error, try `rustc --explain E0716`.
